fixed more spacing errors

--- a/public/style.css
+++ b/public/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 
 body{
@@ -386,10 +387,6 @@ Description: Define screen-size breakpoints here.
         line-height: 2.5rem !important;
     }
 
-    #createNewBook {
-        margin-top: 3rem;
-    }
-
     #mainnav ul {
         display: none;
         background: white;
@@ -418,6 +415,10 @@ Description: Define screen-size breakpoints here.
         margin: 0;
     }
 
+    #home-main {
+        margin-bottom: 12rem !important;
+    }
+
     #home-section div {
         color: rgb(152, 88, 57);
         font-size: 5rem;
@@ -437,7 +438,7 @@ Description: Define screen-size breakpoints here.
 
      #leftQuote, #rightQuote {
         font-size: 1rem;
-        line-height: 3.5rem;
+        line-height: 5.5rem;
     }
 
     .smallerInputGroup {
